Renaming BjWFrahvgpJDmYIp5z8dBro9TPDMMRoDsFfjIzp0JRKNuPVew1 to สถิติหวยลาว ส ตา ร์ วันศุกร์ คืออะไร - เว็บใหม่ mawinbet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "BjWFrahvgpJDmYIp5z8dBro9TPDMMRoDsFfjIzp0JRKNuPVew1",
+  "name": "สถิติหวยลาว ส ตา ร์ วันศุกร์ คืออะไร - เว็บใหม่ mawinbet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.68",
   "description": "สถิติหวยลาว ส ตา ร์ วันศุกร์ ผลหวยลาว ใน สถิติหวยลาว ส ตา ร์ วันศุกร์ ที่ Mawinbet เว็บหวยออนไลน์ อันดับหนึ่ง 12965 ผลหวยพัฒนา 12965 ผลหวยลาววันนี้ ย้อนหลั",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["สถิติหวยลาว ส ตา ร์ วันศุกร์","สถิติหวยลาว","ส","ตา","ร์","วันศุกร์","สถิติหวยลาว Mawinbet","ส Mawinbet","ตา Mawinbet","ร์ Mawinbet","วันศุกร์ Mawinbet"],
+  "keywords": [
+    "สถิติหวยลาว ส ตา ร์ วันศุกร์",
+    "สถิติหวยลาว",
+    "ส",
+    "ตา",
+    "ร์",
+    "วันศุกร์",
+    "สถิติหวยลาว Mawinbet",
+    "ส Mawinbet",
+    "ตา Mawinbet",
+    "ร์ Mawinbet",
+    "วันศุกร์ Mawinbet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
