--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "สถิติหวยลาว ส ตา ร์ วันศุกร์ คืออะไร - เว็บใหม่ mawinbet 2023 ล่าสุด",
+  "name": "kmZ6duAlK3OGe6uPJVGSE1txyilrYqpDwtY1a5UtEaVMDSo3lw",
   "theme": "syntax",
   "version": "1.0.69",
-  "description": "สถิติหวยลาว ส ตา ร์ วันศุกร์ ผลหวยลาว ใน สถิติหวยลาว ส ตา ร์ วันศุกร์ ที่ Mawinbet เว็บหวยออนไลน์ อันดับหนึ่ง 12965 ผลหวยพัฒนา 12965 ผลหวยลาววันนี้ ย้อนหลั",
+  "description": "เล่นหวย อย่างไรให้ได้ กํา ไร สูตร ว่าด้วย เล่นหวย อย่างไรให้ได้ กํา ไร ที่ Kerry899 เว็บหวยออนไลน์ อันดับหนึ่ง 8 พาปัง ดังทุกงวด เป็นสูตรที่จะใช้ตัวเลข 8 ซ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "สถิติหวยลาว ส ตา ร์ วันศุกร์",
-    "สถิติหวยลาว",
-    "ส",
-    "ตา",
-    "ร์",
-    "วันศุกร์",
-    "สถิติหวยลาว Mawinbet",
-    "ส Mawinbet",
-    "ตา Mawinbet",
-    "ร์ Mawinbet",
-    "วันศุกร์ Mawinbet"
-  ],
+  "keywords": ["เล่นหวย อย่างไรให้ได้ กํา ไร","เล่นหวย","อย่างไรให้ได้","กํา","ไร","เล่นหวย Kerry899","อย่างไรให้ได้ Kerry899","กํา Kerry899","ไร Kerry899"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
