--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "เล่นหวย อย่างไรให้ได้ กํา ไร ดูที่ไหน - เว็บใหม่ kerry899 2023 ล่าสุด",
+  "name": "J2LmXHGCqWCYdvkrCreOK5ik1wQatXqIQeboahVpf1Qew2eN7K",
   "theme": "syntax",
   "version": "1.0.70",
-  "description": "เล่นหวย อย่างไรให้ได้ กํา ไร สูตร ว่าด้วย เล่นหวย อย่างไรให้ได้ กํา ไร ที่ Kerry899 เว็บหวยออนไลน์ อันดับหนึ่ง 8 พาปัง ดังทุกงวด เป็นสูตรที่จะใช้ตัวเลข 8 ซ",
+  "description": "สูตรหวย ดาวโจนส์ VIP เลขเด็ด สู่ สูตรหวย ดาวโจนส์ VIP Ltobet แอลทีโอ เบท หวยออนไลน์ มีหวยทุกชนิด ที่เว็บไซต์หวยไทยของเราจะนำเสนอในวันนี้นั้นเป็นชุดเลขจากหว",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "เล่นหวย อย่างไรให้ได้ กํา ไร",
-    "เล่นหวย",
-    "อย่างไรให้ได้",
-    "กํา",
-    "ไร",
-    "เล่นหวย Kerry899",
-    "อย่างไรให้ได้ Kerry899",
-    "กํา Kerry899",
-    "ไร Kerry899"
-  ],
+  "keywords": ["สูตรหวย ดาวโจนส์ VIP","สูตรหวย","ดาวโจนส์","VIP","สูตรหวย Ltobet","ดาวโจนส์ Ltobet","VIP Ltobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
