Renaming eOJorP4BySZPwB0OhPaYoDR45QcOFrQSmNY9SDxWseO7GeyX9s to สูตรหวย ดาวโจนส์ vip เล่นยังไง - เว็บใหม่ ltobet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "eOJorP4BySZPwB0OhPaYoDR45QcOFrQSmNY9SDxWseO7GeyX9s",
+  "name": "สูตรหวย ดาวโจนส์ vip เล่นยังไง - เว็บใหม่ ltobet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.73",
   "description": "สูตรหวย ดาวโจนส์ VIP เลขเด็ด สู่ สูตรหวย ดาวโจนส์ VIP Ltobet แอลทีโอ เบท หวยออนไลน์ มีหวยทุกชนิด ที่เว็บไซต์หวยไทยของเราจะนำเสนอในวันนี้นั้นเป็นชุดเลขจากหว",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["สูตรหวย ดาวโจนส์ VIP","สูตรหวย","ดาวโจนส์","VIP","สูตรหวย Ltobet","ดาวโจนส์ Ltobet","VIP Ltobet"],
+  "keywords": [
+    "สูตรหวย ดาวโจนส์ VIP",
+    "สูตรหวย",
+    "ดาวโจนส์",
+    "VIP",
+    "สูตรหวย Ltobet",
+    "ดาวโจนส์ Ltobet",
+    "VIP Ltobet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
