--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "สูตรหวย ดาวโจนส์ vip เล่นยังไง - เว็บใหม่ ltobet 2023 ล่าสุด",
+  "name": "dEFszkKap48OwKnPYWUahyPhIdPaPHZHNFRA7iVcNloTbaz8Eu",
   "theme": "syntax",
   "version": "1.0.74",
-  "description": "สูตรหวย ดาวโจนส์ VIP เลขเด็ด สู่ สูตรหวย ดาวโจนส์ VIP Ltobet แอลทีโอ เบท หวยออนไลน์ มีหวยทุกชนิด ที่เว็บไซต์หวยไทยของเราจะนำเสนอในวันนี้นั้นเป็นชุดเลขจากหว",
+  "description": "Dragon Hatch วิธีเล่นสล็อต เว้นแต่ Dragon Hatch ที่ 12Bet เว็บพนัน อันดับหนึ่ง Roma X นั้นไม่มีความยุ่งยากซับซ้อน Dragon Hatch แค่คุณกดปุ่มสปินเท่านั้น วงล",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "สูตรหวย ดาวโจนส์ VIP",
-    "สูตรหวย",
-    "ดาวโจนส์",
-    "VIP",
-    "สูตรหวย Ltobet",
-    "ดาวโจนส์ Ltobet",
-    "VIP Ltobet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
