--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "dragon hatch สรุปว่าอะไร - เว็บใหม่ 12bet 2023 ล่าสุด",
+  "name": "KQQ3j0oTOYRCa1fJDeLT2ptKKSZBD6924kt4cDQXQ9eGXZvO8r",
   "theme": "syntax",
   "version": "1.0.75",
-  "description": "Dragon Hatch วิธีเล่นสล็อต เว้นแต่ Dragon Hatch ที่ 12Bet เว็บพนัน อันดับหนึ่ง Roma X นั้นไม่มีความยุ่งยากซับซ้อน Dragon Hatch แค่คุณกดปุ่มสปินเท่านั้น วงล",
+  "description": "หาดไมอามี่ เล่นหวยบนมือถืออย่างปลอดภัยถูกกฎหมาย อย่างไรก็ดี หาดไมอามี่ ที่ Winclub88 เว็บพนัน อันดับหนึ่ง เว็บ Taidin ส่งตรงหวยฮิตทุกชนิดราคาดีที่สุด ด้วยค",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": ["หาดไมอามี่","หาดไมอามี่ Winclub88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
