Renaming KQQ3j0oTOYRCa1fJDeLT2ptKKSZBD6924kt4cDQXQ9eGXZvO8r to หาดไมอามี่ สรุปว่าอะไร - เว็บใหม่ winclub88 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "KQQ3j0oTOYRCa1fJDeLT2ptKKSZBD6924kt4cDQXQ9eGXZvO8r",
+  "name": "หาดไมอามี่ สรุปว่าอะไร - เว็บใหม่ winclub88 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.75",
   "description": "หาดไมอามี่ เล่นหวยบนมือถืออย่างปลอดภัยถูกกฎหมาย อย่างไรก็ดี หาดไมอามี่ ที่ Winclub88 เว็บพนัน อันดับหนึ่ง เว็บ Taidin ส่งตรงหวยฮิตทุกชนิดราคาดีที่สุด ด้วยค",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["หาดไมอามี่","หาดไมอามี่ Winclub88"],
+  "keywords": [
+    "หาดไมอามี่",
+    "หาดไมอามี่ Winclub88"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
