--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หาดไมอามี่ สรุปว่าอะไร - เว็บใหม่ winclub88 2023 ล่าสุด",
+  "name": "i7wfKfqDO71Xg910CrlWP9hO395ETJpwVSDDJ7oSelfYU6Q1Qm",
   "theme": "syntax",
   "version": "1.0.76",
   "description": "หาดไมอามี่ เล่นหวยบนมือถืออย่างปลอดภัยถูกกฎหมาย อย่างไรก็ดี หาดไมอามี่ ที่ Winclub88 เว็บพนัน อันดับหนึ่ง เว็บ Taidin ส่งตรงหวยฮิตทุกชนิดราคาดีที่สุด ด้วยค",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หาดไมอามี่",
-    "หาดไมอามี่ Winclub88"
-  ],
+  "keywords": ["หาดไมอามี่","หาดไมอามี่ Winclub88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
