--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หาดไมอามี่ สรุปว่าอะไร - เว็บใหม่ winclub88 2023 ล่าสุด",
+  "name": "goVtPR1JKMPR7FWCnH0FiHKwhj7fvW27DpxoiLRV4WMyUenewU",
   "theme": "syntax",
   "version": "1.0.77",
-  "description": "หาดไมอามี่ เล่นหวยบนมือถืออย่างปลอดภัยถูกกฎหมาย อย่างไรก็ดี หาดไมอามี่ ที่ Winclub88 เว็บพนัน อันดับหนึ่ง เว็บ Taidin ส่งตรงหวยฮิตทุกชนิดราคาดีที่สุด ด้วยค",
+  "description": "groundhog day imdb เว็บไซต์ แม้ groundhog day imdb ที่ Lv177 เว็บพนัน อันดับหนึ่ง คาสิโน ออนไลน์ของเรานี้ Sagameclub88 groundhog day imdb ถือได้ว่าเป็ยเว็บ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หาดไมอามี่",
-    "หาดไมอามี่ Winclub88"
-  ],
+  "keywords": ["GROUNDHOG DAY IMDB","GROUNDHOG","DAY","IMDB","GROUNDHOG Lv177","DAY Lv177","IMDB Lv177"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
