--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "c3JjZRaRze4KIV4ic9e1A3t9NaRbSIgjGeTHnB2rVhxlEYNY8G",
+  "name": "สูตร เจาะ หวยหุ้น ที่ไหน - เว็บใหม่ huaylike 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.79",
   "description": "สูตร เจาะ หวยหุ้น เลขเด็ดงวดนี้ ดั่ง สูตร เจาะ หวยหุ้น Huaylike หวยออนไลน์ อันดับหนึ่ง ขอนำเสนอชุดแนวทางสลากกินแบ่งรัฐบาลงวดในงวดประจำวันอาทิตย์ที่ 2 พฤษภา",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["สูตร เจาะ หวยหุ้น","สูตร","เจาะ","หวยหุ้น","สูตร Huaylike","เจาะ Huaylike","หวยหุ้น Huaylike"],
+  "keywords": [
+    "สูตร เจาะ หวยหุ้น",
+    "สูตร",
+    "เจาะ",
+    "หวยหุ้น",
+    "สูตร Huaylike",
+    "เจาะ Huaylike",
+    "หวยหุ้น Huaylike"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
