--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "สูตร เจาะ หวยหุ้น ที่ไหน - เว็บใหม่ huaylike 2023 ล่าสุด",
+  "name": "99NzmAWeW4lyeQGCGxrY8BZrvILfwLm2MEWPd82nXdXazMsCHC",
   "theme": "syntax",
-  "version": "1.0.80",
-  "description": "สูตร เจาะ หวยหุ้น เลขเด็ดงวดนี้ ดั่ง สูตร เจาะ หวยหุ้น Huaylike หวยออนไลน์ อันดับหนึ่ง ขอนำเสนอชุดแนวทางสลากกินแบ่งรัฐบาลงวดในงวดประจำวันอาทิตย์ที่ 2 พฤษภา",
+  "version": "1.0.79",
+  "description": "groundhog day imdb เว็บไซต์ แม้ groundhog day imdb ที่ Lv177 เว็บพนัน อันดับหนึ่ง คาสิโน ออนไลน์ของเรานี้ Sagameclub88 groundhog day imdb ถือได้ว่าเป็ยเว็บ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "สูตร เจาะ หวยหุ้น",
-    "สูตร",
-    "เจาะ",
-    "หวยหุ้น",
-    "สูตร Huaylike",
-    "เจาะ Huaylike",
-    "หวยหุ้น Huaylike"
-  ],
+  "keywords": ["GROUNDHOG DAY IMDB","GROUNDHOG","DAY","IMDB","GROUNDHOG Lv177","DAY Lv177","IMDB Lv177"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
