--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "99NzmAWeW4lyeQGCGxrY8BZrvILfwLm2MEWPd82nXdXazMsCHC",
+  "name": "rtUuzobVFC8r8HsFJ0cvCEjzC38sQfeFc2CWlEeTMkqYvCkOa9",
   "theme": "syntax",
-  "version": "1.0.79",
-  "description": "groundhog day imdb เว็บไซต์ แม้ groundhog day imdb ที่ Lv177 เว็บพนัน อันดับหนึ่ง คาสิโน ออนไลน์ของเรานี้ Sagameclub88 groundhog day imdb ถือได้ว่าเป็ยเว็บ",
+  "version": "1.0.80",
+  "description": "วิธีเล่นหวยฮานอย ช่องดูบอลสด เมื่อ วิธีเล่นหวยฮานอย ที่ Huaysod เว็บหวยออนไลน์ อันดับหนึ่ง เบิร์นลี่ย์ เชลซี ช่องดูบอลสด เชลซี ดูบอลสด เบิร์นลี่ย์ Vs เชลซี",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["GROUNDHOG DAY IMDB","GROUNDHOG","DAY","IMDB","GROUNDHOG Lv177","DAY Lv177","IMDB Lv177"],
+  "keywords": ["วิธีเล่นหวยฮานอย","วิธีเล่นหวยฮานอย Huaysod"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
