--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "วิธีเล่นหวยฮานอย สรุปว่าอะไร - เว็บใหม่ huaysod 2023 ล่าสุด",
+  "name": "5tiu2eo7ldgiRrYedYI01UZdfsWNSD4XngDLP9LLAKdAGRteNa",
   "theme": "syntax",
   "version": "1.0.81",
-  "description": "วิธีเล่นหวยฮานอย ช่องดูบอลสด เมื่อ วิธีเล่นหวยฮานอย ที่ Huaysod เว็บหวยออนไลน์ อันดับหนึ่ง เบิร์นลี่ย์ เชลซี ช่องดูบอลสด เชลซี ดูบอลสด เบิร์นลี่ย์ Vs เชลซี",
+  "description": "ฮั่งเส็งบ่าย ทำให้มั่นใจได้เลยว่าทุกตัวเลขที่ออกมานั้นมาจากการสุ่มการจับรางวัล หาก ฮั่งเส็งบ่าย Huay Happy หวยออนไลน์ อันดับหนึ่ง 100 ไม่มีการล็อกผลไม่มีกา",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "วิธีเล่นหวยฮานอย",
-    "วิธีเล่นหวยฮานอย Huaysod"
-  ],
+  "keywords": ["ฮั่งเส็งบ่าย","ฮั่งเส็งบ่าย Huay Happy"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
