--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ฮั่งเส็งบ่าย ดูที่ไหน - เว็บใหม่ huay happy 2023 ล่าสุด-",
+  "name": "2qplyQDxNqUTqjZgak4ydCfqhXdUjJWxqYJKjsxkOs682broxu",
   "theme": "syntax",
   "version": "1.0.85",
-  "description": "ฮั่งเส็งบ่าย ทำให้มั่นใจได้เลยว่าทุกตัวเลขที่ออกมานั้นมาจากการสุ่มการจับรางวัล หาก ฮั่งเส็งบ่าย Huay Happy หวยออนไลน์ อันดับหนึ่ง 100 ไม่มีการล็อกผลไม่มีกา",
+  "description": "Singapore index หวยไทยรัฐ หากว่า Singapore index Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด ชุดเลขเด่นที่มีแนวทางสลากกินแบ่งรัฐบาลมาแจกกันทุกงวด นอกจากนี้ทางเว็",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ฮั่งเส็งบ่าย",
-    "ฮั่งเส็งบ่าย Huay Happy"
-  ],
+  "keywords": ["SINGAPORE INDEX","SINGAPORE","INDEX","SINGAPORE Huaysod","INDEX Huaysod"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
