--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "singapore index เล่นยังไง - เว็บใหม่ huaysod 2023 ล่าสุด",
+  "name": "iRot31ma4f3PhuJpbIcXBYikSydsxwQcrLA1MpYXN8RL1a1mKe",
   "theme": "syntax",
   "version": "1.0.87",
-  "description": "Singapore index หวยไทยรัฐ หากว่า Singapore index Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด ชุดเลขเด่นที่มีแนวทางสลากกินแบ่งรัฐบาลมาแจกกันทุกงวด นอกจากนี้ทางเว็",
+  "description": "ตารางคู่เลข ฟังหวยออนไลน์ ใน ตารางคู่เลข Masurebet หวยออนไลน์ อันดับหนึ่ง Am 891 ฟังหวยออก สดๆ รวดเร็วทันใจวันสำคัญของนักเสี่ยงโชคประจำเดือน สิงหาคม 2566 ใ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "SINGAPORE INDEX",
-    "SINGAPORE",
-    "INDEX",
-    "SINGAPORE Huaysod",
-    "INDEX Huaysod"
-  ],
+  "keywords": ["ตารางคู่เลข","ตารางคู่เลข Masurebet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
