--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ตารางคู่เลข ได้อย่างไร - เว็บใหม่ masurebet 2023 ล่าสุด",
+  "name": "su0gzQx9rjBsTLCxw4zBXC2Wg0ZM5BorMllw5yRavGxul9iBXP",
   "theme": "syntax",
   "version": "1.0.88",
-  "description": "ตารางคู่เลข ฟังหวยออนไลน์ ใน ตารางคู่เลข Masurebet หวยออนไลน์ อันดับหนึ่ง Am 891 ฟังหวยออก สดๆ รวดเร็วทันใจวันสำคัญของนักเสี่ยงโชคประจำเดือน สิงหาคม 2566 ใ",
+  "description": "roma สล็อต สำหรับท่านใดที่พึงพอใจต้องการจะทำรายการลงทะเบียน อย่างไรก็ดี roma สล็อต Winclub88 เว็บพนันออนไลน์ อันดับหนึ่ง ทางเข้าเล่นPg77th สล็อตเว็บตรง เพื",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ตารางคู่เลข",
-    "ตารางคู่เลข Masurebet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
