--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "roma สล็อต ทำไมถึงนิยม - เว็บใหม่ winclub88 2023 ล่าสุด",
+  "name": "wfwlhYIUcm6VNhA6a4sIs3IhSNwnsc3GcF4ZBeiQK4PJgMk54p",
   "theme": "syntax",
   "version": "1.0.89",
-  "description": "roma สล็อต สำหรับท่านใดที่พึงพอใจต้องการจะทำรายการลงทะเบียน อย่างไรก็ดี roma สล็อต Winclub88 เว็บพนันออนไลน์ อันดับหนึ่ง ทางเข้าเล่นPg77th สล็อตเว็บตรง เพื",
+  "description": "dafabet การที่ผู้เล่นไม่มีประสบการณ์ไม่ได้แสดงว่าท่านจะไม่มีจังหวะสำหรับเพื่อการเล่นเกมพนัน หรือ dafabet ที่ Slot888 เว็บพนัน มีเกมพนันทุกชนิด dafabet เว็บ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": ["DAFABET","DAFABET Slot888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
