--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "dafabet เล่นที่ไหน - เว็บใหม่ slot888 2023 ล่าสุด",
+  "name": "FgIi6R2nXY0s800kg4kJCwRdCkX1n381pMxU3jnuvDHgloNnos",
   "theme": "syntax",
   "version": "1.0.90",
   "description": "dafabet การที่ผู้เล่นไม่มีประสบการณ์ไม่ได้แสดงว่าท่านจะไม่มีจังหวะสำหรับเพื่อการเล่นเกมพนัน หรือ dafabet ที่ Slot888 เว็บพนัน มีเกมพนันทุกชนิด dafabet เว็บ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "DAFABET",
-    "DAFABET Slot888"
-  ],
+  "keywords": ["DAFABET","DAFABET Slot888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
