--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "QfvQ0k6E12oDxqViAFFQqjb1ivlrnNXXYZxvVMML8AOmutB8Yb",
   "theme": "syntax",
   "version": "1.0.90",
-  "description": "dafabet การที่ผู้เล่นไม่มีประสบการณ์ไม่ได้แสดงว่าท่านจะไม่มีจังหวะสำหรับเพื่อการเล่นเกมพนัน หรือ dafabet ที่ Slot888 เว็บพนัน มีเกมพนันทุกชนิด dafabet เว็บ",
+  "description": "หวย ทับศัพท์ หวยเสือตกถังพลังเงินดี แม้ หวย ทับศัพท์ Jetsadabet เจษฎาเบท หวยออนไลน์ มีหวยทุกชนิด หวย ทับศัพท์ เป็นอีกหนึ่งสำนักที่ให้แนวทาง หวยรัฐบาล มาอย่",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["DAFABET","DAFABET Slot888"],
+  "keywords": ["หวย ทับศัพท์","หวย","ทับศัพท์","หวย Jetsadabet","ทับศัพท์ Jetsadabet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
