--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "UO7Y2JHRW095vtmZJ36WbZBMiTUfnMGRDY1TqXQrzmI4Z2Iirz",
+  "name": "หวย ทับศัพท์ ได้อย่างไร - เว็บใหม่ jetsadabet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.90",
   "description": "หวย ทับศัพท์ หวยเสือตกถังพลังเงินดี แม้ หวย ทับศัพท์ Jetsadabet เจษฎาเบท หวยออนไลน์ มีหวยทุกชนิด หวย ทับศัพท์ เป็นอีกหนึ่งสำนักที่ให้แนวทาง หวยรัฐบาล มาอย่",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["หวย ทับศัพท์","หวย","ทับศัพท์","หวย Jetsadabet","ทับศัพท์ Jetsadabet"],
+  "keywords": [
+    "หวย ทับศัพท์",
+    "หวย",
+    "ทับศัพท์",
+    "หวย Jetsadabet",
+    "ทับศัพท์ Jetsadabet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
