--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "หวย ทับศัพท์ ได้อย่างไร - เว็บใหม่ jetsadabet 2023 ล่าสุด",
+  "name": "6hJ8CH1NgN0DAzWp58Z98BK6rhAQ5XOcJuaiDZBOm0J4OEuSmh",
   "theme": "syntax",
   "version": "1.0.91",
-  "description": "หวย ทับศัพท์ หวยเสือตกถังพลังเงินดี แม้ หวย ทับศัพท์ Jetsadabet เจษฎาเบท หวยออนไลน์ มีหวยทุกชนิด หวย ทับศัพท์ เป็นอีกหนึ่งสำนักที่ให้แนวทาง หวยรัฐบาล มาอย่",
+  "description": "สถิติหุ้นสิงคโปร์ สำหรับนักเสี่ยงโชคที่กำลังมองหาแนวทาง ว่า สถิติหุ้นสิงคโปร์ ที่ Huay Happy เว็บหวยออนไลน์ อันดับหนึ่ง เลขเด็ด ประจำงวดวันที่ สถิติหุ้นสิง",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หวย ทับศัพท์",
-    "หวย",
-    "ทับศัพท์",
-    "หวย Jetsadabet",
-    "ทับศัพท์ Jetsadabet"
-  ],
+  "keywords": ["สถิติหุ้นสิงคโปร์","สถิติหุ้นสิงคโปร์ Huay Happy"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
