--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "6hJ8CH1NgN0DAzWp58Z98BK6rhAQ5XOcJuaiDZBOm0J4OEuSmh",
+  "name": "f6r0Z7UPhaDkAx0u1acreIgarxf05PfzzQzByQNWZwh0uBZvgp",
   "theme": "syntax",
   "version": "1.0.91",
-  "description": "สถิติหุ้นสิงคโปร์ สำหรับนักเสี่ยงโชคที่กำลังมองหาแนวทาง ว่า สถิติหุ้นสิงคโปร์ ที่ Huay Happy เว็บหวยออนไลน์ อันดับหนึ่ง เลขเด็ด ประจำงวดวันที่ สถิติหุ้นสิง",
+  "description": "สูตรหวย 2 ตัวบน ชุดเลข ถ้า สูตรหวย 2 ตัวบน Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัวเต็ง-โตีด ได้แก่193-139-931-913-319-391353-335-533573-537-735-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["สถิติหุ้นสิงคโปร์","สถิติหุ้นสิงคโปร์ Huay Happy"],
+  "keywords": ["สูตรหวย 2 ตัวบน","สูตรหวย","2","ตัวบน","สูตรหวย Thailotto","2 Thailotto","ตัวบน Thailotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
