--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "JnTdHButterUEFZRjwV6sytyrSExbDL9Iu048rz6nFb0Vx6QWI",
+  "name": "สูตรหวย 2 ตัวบน เล่นยังไง - เว็บใหม่ thailotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.91",
   "description": "สูตรหวย 2 ตัวบน ชุดเลข ถ้า สูตรหวย 2 ตัวบน Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัวเต็ง-โตีด ได้แก่193-139-931-913-319-391353-335-533573-537-735-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["สูตรหวย 2 ตัวบน","สูตรหวย","2","ตัวบน","สูตรหวย Thailotto","2 Thailotto","ตัวบน Thailotto"],
+  "keywords": [
+    "สูตรหวย 2 ตัวบน",
+    "สูตรหวย",
+    "2",
+    "ตัวบน",
+    "สูตรหวย Thailotto",
+    "2 Thailotto",
+    "ตัวบน Thailotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
