--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "สูตรหวย 2 ตัวบน เล่นยังไง - เว็บใหม่ thailotto 2023 ล่าสุด",
+  "name": "rnSDPTRnZTUWcvsSb8OLeEYqMwFBMtFOOoaijv9QdHrQ9Pgr41",
   "theme": "syntax",
   "version": "1.0.93",
-  "description": "สูตรหวย 2 ตัวบน ชุดเลข ถ้า สูตรหวย 2 ตัวบน Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัวเต็ง-โตีด ได้แก่193-139-931-913-319-391353-335-533573-537-735-",
+  "description": "water margin netflix หลายท่านที่บางครั้งอาจจะยังไม่เคยทำพนันๆเว็บ แต่ว่า water margin netflix ที่ Webet88 เว็บพนัน มีเกมพนันทุกชนิด คาสิโนLuciawin ก็อาจจะเ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "สูตรหวย 2 ตัวบน",
-    "สูตรหวย",
-    "2",
-    "ตัวบน",
-    "สูตรหวย Thailotto",
-    "2 Thailotto",
-    "ตัวบน Thailotto"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
