--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "water margin netflix สรุปว่าอะไร - เว็บใหม่ webet88 2023 ล่าสุด",
+  "name": "EIfPJxJKc7xxFWBzDgR1RcbpKttZetjg3EXmA8n02XDMGchqHT",
   "theme": "syntax",
   "version": "1.0.94",
   "description": "water margin netflix หลายท่านที่บางครั้งอาจจะยังไม่เคยทำพนันๆเว็บ แต่ว่า water margin netflix ที่ Webet88 เว็บพนัน มีเกมพนันทุกชนิด คาสิโนLuciawin ก็อาจจะเ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
